src/test/deca/syntax/valid/SansObjet/DeclVar-Init-OddFormat.deca
// Description:
//    Declaration of a variable with odd formatting.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
int
x   =
  3
                    ;
}
