src/test/deca/syntax/invalid/SansObjet/Cast-NoOpCp.deca
// Description:
//    Declaration of a int variable using a int cast on a int literal .
// 
// Results:
//     Syntax error on line 11
// 
// Historique: 
//    cree le 14/01/2022 

{
    int x =  (int) 17 ;
}
